fixed subscribe button upper padding on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -424,8 +424,8 @@ em {
     cursor: pointer;
     font-size: 14px;
     padding: 20.5px;
-    padding-top: 8px;
-    padding-bottom: 8px;
+    padding-top: 8.5px;
+    padding-bottom: 7.5px;
     border-radius: 25px;
     border: none;
     margin-left: -116px;
